fix spacings in about page

--- a/src/styles/spacings.scss
+++ b/src/styles/spacings.scss
@@ -6,7 +6,7 @@
   --border-radius: 5px;
   --card-spacing: 1rem;
   --grid-gap: 20px;
-  --small-grid-gap: 10px;
+  --small-grid-gap: 15px;
   --small-margin: 0.5rem;
 }
 
