--- a/src/styles/utils.scss
+++ b/src/styles/utils.scss
@@ -68,7 +68,7 @@
 
 .small-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   grid-gap: var(--small-grid-gap);
 }
 
